# game

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  implementation.md  interrogation.md
.cargo/: config.toml
.github/workflows/: ci.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/frontier_planner_performance_pass_20260227/: index.md  spec.md
conductor/archive/milestone_6c_determinism_hash_20260227/: index.md  spec.md
conductor/tracks/frontier_planner_performance_pass_20260227/: metadata.json  plan.md
conductor/tracks/milestone_6c_determinism_hash_20260227/: metadata.json  plan.md
crates/app/: Cargo.toml
crates/app/src/: app_loop.rs  frame_input.rs  game_layout.rs  lib.rs  main.rs  run_state_file.rs  seed.rs  ui_render.rs  ui_scale.rs  ui_scale_file.rs  ui_text.rs  window_config.rs
crates/app/src/ui_render/: tests.rs
crates/app/tests/: app_mode.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/: floor.txt
crates/core/src/: content.rs  floor.rs  game.rs  journal.rs  journal_file.rs  lib.rs  mapgen.rs  replay.rs  state.rs  types.rs
crates/core/src/game/: auto_explore.rs  bootstrap.rs  choices.rs  engine.rs  floor_transition.rs  hash.rs  items.rs  pathfinding.rs  prompts.rs  test_support.rs  threat.rs  visibility.rs
crates/core/src/game/auto_explore/: frontier.rs  pathing.rs  planner.rs  search.rs
crates/core/src/game/auto_explore/planner/: tests.rs
crates/core/src/game/auto_explore/planner/tests/: downstairs_policy.rs  frontier_policy.rs  integration_regressions.rs
crates/core/src/game/choices/: avoidance.rs  combat.rs  floor_transition.rs  loot.rs  policy.rs  targeting.rs
crates/core/src/game/engine/: advance.rs  encounters.rs  intent.rs  tests.rs
crates/core/src/game/engine/tests/: bootstrap_layout.rs  intent_planning.rs  interruption_flow.rs  termination_guards.rs
crates/core/src/game/floor_transition/: actors.rs  install.rs  tests.rs
crates/core/src/game/items/: consumables.rs  fortification.rs  inventory.rs  search.rs  spatial_effects.rs
crates/core/src/journal_file/: tests.rs
crates/core/src/mapgen/: generator.rs  grid.rs  layout.rs  model.rs  progression.rs  seed.rs  spawns.rs  vaults.rs
crates/core/src/mapgen/generator/: hazards.rs  pipeline.rs  tests.rs
crates/core/src/replay/: tests.rs
crates/core/tests/: determinism.rs  interrupt_pacing.rs  journal_replay.rs  semantic_fuzz.proptest-regressions  semantic_fuzz.rs  smoke_tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: main.rs
crates/tools/tests/: balance_kpi_tests.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs
docs/: plan.md  risks.md  scratchpad.md  technology-options.md  vision.md
xtask/: Cargo.toml
xtask/src/: main.rs
