[workspace]
members = [
    "crates/core",
    "crates/app",
    "crates/tools",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
core = { path = "crates/core" }
macroquad = "0.4"
rand_chacha = "0.10.0"
slotmap = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
