[workspace]
members = [
    "crates/core",
    "crates/app",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"

[workspace.dependencies]
core = { path = "crates/core" }
macroquad = "0.4"
rand_chacha = "0.10.0"
slotmap = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
color-eyre = "0.6"
toml = "0.9.8"
tempfile = "3.10"
regex = "1.12.3"

[workspace.lints.clippy]
# cognitive_complexity = "warn"
# type_complexity = "warn"
# too_many_arguments = "warn"
# too_many_lines = "warn"
# large_enum_variant = "warn"
# struct_excessive_bools = "warn"
absolute_paths = "warn"
