[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
clap = { workspace = true, features = ["derive"] }
ra-ap-rustc_lexer = "0.150.0"
anyhow.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
