[package]
name = "core"
version = "0.1.0"
edition.workspace = true

[dependencies]
rand_chacha = { workspace = true }
slotmap = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
proptest = "1.10.0"
tempfile = { workspace = true }

[lints]
workspace = true
