[package]
name = "tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
game_core = { path = "../core", package = "core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest = "1.10.0"
